transport changes in crm and cheque process changes in crm changes in user creation

--- a/app/elements/CRM-app/CRM-app.html
+++ b/app/elements/CRM-app/CRM-app.html
@@ -23,6 +23,9 @@
         <section data-category="generate-tc-homecard">
           <generate-tc-homecard></generate-tc-homecard>
         </section>
+        <section data-category="transport-receipt-outcard">
+          <transport-receipt-outcard></transport-receipt-outcard>
+        </section>
       </iron-pages>
       <login-service id="login"></login-service>
   </template>
