--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -334,7 +334,23 @@
             <div class="col-md-12">
               <role-menu-mapping-card></role-menu-mapping-card>
             </div>
-          </section>    
+          </section>  
+          <section data-category="transport-receipt-searchcard">
+            <div class="col-md-12">
+              <transport-receipt-searchcard></transport-receipt-searchcard>
+            </div>
+          </section> 
+          <section data-category="transport-editdelete-cheque">
+            <div class="col-md-12">
+              <transport-editdelete-cheque></transport-editdelete-cheque>
+            </div>
+          </section>
+          <section data-category="transportdaily-collection-report">
+            <div class="col-md-12">
+              <transportdaily-collection-report></transportdaily-collection-report>
+            </div>
+          </section>  
+          
           </iron-pages>
           </div>
           </div>
