--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -289,3 +289,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="role-menu-mapping-card/role-menu-mapping-card.html">
 <link rel="import" href="mainmenu-card/mainmenu-card.html">
 <link rel="import" href="submenu-card/submenu-card.html">
+<link rel="import" href="transportfee-schedule-card/transportfee-schedule-card.html">
+<link rel="import" href="transportfee-card/transportfee-card.html">
+<link rel="import" href="transportfee-installment-card/transportfee-installment-card.html">
+<link rel="import" href="transportfee-service/transportfee-service.html">
+<link rel="import" href="transportfee-schedule-itemcard/transportfee-schedule-itemcard.html">
+<link rel="import" href="transport-receipt/transport-receipt.html">
+<link rel="import" href="transport-receipt-outcard/transport-receipt-outcard.html">
+<link rel="import" href="transportfee-sch-datepicker/transportfee-sch-datepicker.html">
+<link rel="import" href="transport-receipt-searchcard/transport-receipt-searchcard.html">
+<link rel="import" href="transport-editdelete-cheque/transport-editdelete-cheque.html">
+<link rel="import" href="transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html">
+<link rel="import" href="transportdaily-collection-report/transportdaily-collection-report.html">
