--- a/app/elements/registerationfee-card/registerationfee-card.html
+++ b/app/elements/registerationfee-card/registerationfee-card.html
@@ -108,7 +108,7 @@
             <div style="margin-left:12%;" hidden$="{{hiddeninstallment}}"> 
               <template  is="dom-repeat" items="{{feearr}}" as="view">
                 <appregfee-installment-card  hiddenpayflag="{{view.hiddenpayflag}}" modeofpayment="{{view.modeofpayment}}" paidflag="{{view.paidflag}}" readonlyflag="{{view.readonlyflag}}" hiddenflag="{{view.hiddenflag}}" installment="{{view.installment}}" installmenttype="{{view.installment_type}}" amount="{{view.payableamount}}" actualamount="{{view.actualamount}}"
-                discountamount="{{view.discountamount}}" installmentdate="{{view.installment_date}}" chequeno="{{view.chequeno}}" paiddate="{{view.paiddate}}"></appregfee-installment-card>
+                discountamount="{{view.discountamount}}" installmentdate="{{view.installment_date}}" chequeno="{{view.chequeno}}" paiddate="{{view.paiddate}}" fineamount="{{view.fineamount}}"></appregfee-installment-card>
               </template>
             </div>
             <div >
@@ -305,6 +305,8 @@
         this.$.feeservice.callInsertChequefeesService(installment[i],installment.length);
       if(installment[i].paymenttype=="Transfer")
         this.$.feeservice.callInsertTransferfeesService(installment[i],installment.length);
+      if(installment[i].paymenttype=="Card Swipe")
+        this.$.feeservice.callInsertTransferfeesService(installment[i],installment.length);
       }
       installment=[];
       document.querySelector('appregfee-installment-card').FnRefresh();
@@ -377,7 +379,7 @@
           for(var i=0;i<item.length;i++)
           {
             var subval=((item[i].student_name).trim()).substring(0,backsubval.length);
-            if((item[i].enquiry_name).toUpperCase().indexOf((this.value).toUpperCase())!=-1)
+            if((item[i].studnet_name).toUpperCase().indexOf((this.value).toUpperCase())!=-1)
             {
               var obj={"itemdes":"","enquiry_no":""};
               obj.itemdes=item[i].student_name;
