--- a/app/elements/appregfee-service/appregfee-service.html
+++ b/app/elements/appregfee-service/appregfee-service.html
@@ -328,6 +328,7 @@
         localStorage.setItem("curr_sess_admissionyear",arr[0].admission_year);
         localStorage.setItem("curr_sess_grade",arr[0].class_for_admission);
         localStorage.setItem("curr_sess_studentname",arr[0].student_name);
+        localStorage.setItem("curr_sess_parentname",arr[0].father_name);
         localStorage.setItem("curr_sess_admissiontype",arr[0].admission_type);
         localStorage.setItem("curr_sess_discounttype",arr[0].discount_type);
         this.callfetchfeesService(localStorage.getItem("curr_sess_academicyear"),localStorage.getItem("curr_sess_admissionyear"),localStorage.getItem("curr_sess_grade"));
