crm transport fixes in inscard

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -301,3 +301,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transport-editdelete-cheque/transport-editdelete-cheque.html">
 <link rel="import" href="transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html">
 <link rel="import" href="transportdaily-collection-report/transportdaily-collection-report.html">
+<link rel="import" href="zonetostudent-card/zonetostudent-card.html">
