--- a/app/elements/transportfee-installment-card/transportfee-installment-card.html
+++ b/app/elements/transportfee-installment-card/transportfee-installment-card.html
@@ -403,7 +403,8 @@
         }
         installmentarr.push(obj);
         // alert(JSON.stringify(installmentarr));
-        document.querySelector('transportfee-card').FnSetfee(installmentarr); 
+        document.querySelector('transportfee-card').FnSetfee(installmentarr);
+        // installmentarr=[]; 
       },
       FnRefresh:function(){
         installmentarr=[];
