--- a/app/elements/transportfee-service/transportfee-service.html
+++ b/app/elements/transportfee-service/transportfee-service.html
@@ -844,6 +844,7 @@
         feereceiptarr=[];
         paymentarr=[];
         document.querySelector('transportfee-card').FnRefresh1();
+        document.querySelector('transportfee-installment-card').FnRefresh();
       },
       fetchstudentforreceiptsearchService:function(){
         this.fetchstudentforreceiptsearchurl=sessionStorage.getItem("addrinfo")+"/fetchstudentforreceiptsearch-service";
