--- a/app/elements/login-service/login-service.html
+++ b/app/elements/login-service/login-service.html
@@ -60,8 +60,9 @@
         var result=e.detail.response.loginarr;
         var rolearr=[];
         rolearr=e.detail.response.rolearr;
-        // alert(JSON.stringify(role));
-          // alert(JSON.stringify(result));
+        // alert(JSON.stringify(result));
+        // alert(JSON.stringify(rolearr));
+          
           if(result.length<=0){
           alert("Username and Password is incorrect..!");
           } 
